--- a/style.css
+++ b/style.css
@@ -7,3 +7,23 @@
 h1 {
   color: blue;
 }
+
+.letter-container {
+  width: 800px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  /*  align-items: flex-end; */
+  border: 2px solid blue;
+}
+
+.letter {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+  border: 2px solid black;
+}
