--- a/style.css
+++ b/style.css
@@ -28,3 +28,14 @@ h1 {
   margin: 20px;
   border: 2px solid black;
 }
+
+#line-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1em;
+}
+
+#line-container > * {
+  font-size: 150px;
+}
