--- a/style.css
+++ b/style.css
@@ -19,14 +19,19 @@ h1 {
 }
 
 .letter {
-  height: 50px;
-  width: 50px;
+  height: 80px;
+  width: 80px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 20px;
   border: 2px solid black;
+  background-color: lightgreen;
+}
+
+.clicked {
+  background-color: red;
 }
 
 #line-container {
