--- a/style.css
+++ b/style.css
@@ -5,42 +5,67 @@
 }
 
 h1 {
-  color: blue;
+  padding: 2em;
+  color: black;
+  font-size: 50px;
+  text-align: center;
+}
+h1 span {
+  font-family: "nosifer", cursive;
+  color: red;
 }
 
-.letter-container {
-  width: 800px;
-  margin: 0 auto;
+.water-font {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.water-font h2 {
+  font-family: "Chango", cursive;
+  font-size: 5em;
+  width: 700px;
+  color: rgba(255, 255, 255, 0.1);
+  background-image: url(images/wave.png);
+  background-repeat: repeat-x;
+  -webkit-background-clip: text;
+  animation: animate 15s normal forwards ease-in-out;
+  animation-iteration-count: 1;
+  border: 2px solid green;
+}
+
+@keyframes animate {
+  0% {
+    background-position: left 0px top 0px;
+  }
+
+  30% {
+    background-position: left 500px top -40px;
+  }
+  100% {
+    background-position: left 800px top -170px;
+  }
+}
+
+.btn-container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  /*  align-items: flex-end; */
-  border: 2px solid blue;
+  align-items: flex-end;
+  height: 280px;
+  border: 2px solid red;
 }
 
-.letter {
-  height: 80px;
-  width: 80px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 20px;
-  border: 2px solid black;
-  background-color: lightgreen;
+#start-button {
+  height: 100px;
+  width: 300px;
+  border-radius: 4%;
+  box-shadow: 2, 1, 1;
+  background-color: rgb(255, 245, 61);
+  font-size: 1.25em;
 }
 
-.clicked-letter {
-  background-color: red;
-}
-
-#line-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1em;
-}
-
-#line-container > * {
-  font-size: 150px;
+#start-button:hover {
+  transform: scale(1.5);
+  cursor: pointer;
 }
