--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 span {
 .water-font {
   position: absolute;
   top: 30%;
-  left: 50%;
+  left: 54%;
   transform: translate(-50%, -50%);
 }
 
@@ -34,18 +34,10 @@ h1 span {
   background-repeat: repeat-x;
   -webkit-background-clip: text;
   animation: animate 10s forwards;
-  animation-iteration-count: 1;
-  border: 2px solid green;
+  /* animation-iteration-count: 1; */
 }
 
 @keyframes animate {
-  0% {
-    background-position: left 0px top 0px;
-  }
-
-  30% {
-    background-position: left 500px top -40px;
-  }
   100% {
     background-position: left 800px top -170px;
   }
@@ -56,7 +48,6 @@ h1 span {
   justify-content: center;
   align-items: flex-end;
   height: 280px;
-  border: 2px solid red;
 }
 
 #start-button {
